feat: ability to change password (resolve #11)
